# cpp-course

./: README.md
control/cpp-classroom-2021-sem02-control01-matrosovm/: CMakeLists.txt  README.adoc
control/cpp-classroom-2021-sem02-control01-matrosovm/src/task_1/: story_points.cpp  story_points.hpp  test_check_top_sp.cpp  test_collapse.cpp  test_top_by_project.cpp
control/cpp-classroom-2021-sem02-control01-matrosovm/src/task_2/: README-02-maslenica.adoc  maslenica.hpp  test_1.cpp  test_2.cpp
control/cpp-classroom-2021-sem02-control01-matrosovm/src/task_3/: test.cpp  test_no_gtest.cpp
control/cpp-classroom-2021-sem02-control02-matrosovm/: .gitignore  CMakeLists.txt  README.adoc
control/cpp-classroom-2021-sem02-control02-matrosovm/src/task_1/: buffer.hpp  buffer_smoke_test.cpp
control/cpp-classroom-2021-sem02-control02-matrosovm/src/task_2/: idlloader.hpp  phonebook.hpp  phonebook.proto  phonebook_smoke_test.cpp
control/cpp-classroom-2021-sem02-control03-matrosovm/: CMakeLists.txt  README.adoc
control/cpp-classroom-2021-sem02-control03-matrosovm/src/task_1/: extension.hpp  smoke.cpp
control/cpp-classroom-2021-sem02-control03-matrosovm/src/task_2/: smoke.cpp
seminar/cpp-classroom-2021-sem01-cls02-matrosovm/: CMakeLists.txt  README.adoc  placeholder.txt
seminar/cpp-classroom-2021-sem01-cls02-matrosovm/src/task_1/: find_nearest_same.cpp  find_nearest_same.hpp  strcmp.cpp  strcmp.hpp  test_find_nearest_same.cpp  test_strcmp.cpp
seminar/cpp-classroom-2021-sem01-cls02-matrosovm/src/task_2/: array_utils.cpp  array_utils.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls02-matrosovm/src/task_3/: ladder_combination.cpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls02-matrosovm/src/task_4/: extract_exponent.cpp  extract_exponent.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls04-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem01-cls04-matrosovm/.circleci/: config.yml
seminar/cpp-classroom-2021-sem01-cls04-matrosovm/src/task_1/: composition.cpp  composition.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls04-matrosovm/src/task_2/: Makefile  sum.c  sum.h  test.cpp
seminar/cpp-classroom-2021-sem01-cls04-matrosovm/src/task_3/: enum.cpp  enum.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls04-matrosovm/src/task_4/: string_view.cpp  string_view.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls05-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem01-cls05-matrosovm/.circleci/: config.yml
seminar/cpp-classroom-2021-sem01-cls05-matrosovm/src/task_1/: lazy_string.cpp  lazy_string.hpp  shared_buffer.cpp  shared_buffer.hpp  test_access_operator.cpp  test_lazy_string.cpp  test_shared_buffer.cpp
seminar/cpp-classroom-2021-sem01-cls05-matrosovm/src/task_2/: read_write.cpp  read_write.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls06-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem01-cls06-matrosovm/.circleci/: config.yml
seminar/cpp-classroom-2021-sem01-cls06-matrosovm/src/: get_size.cpp  get_size.hpp  my_ostream.cpp  my_ostream.hpp  my_ostream_combo.cpp  my_ostream_combo.hpp  my_ostream_con.cpp  my_ostream_con.hpp  my_ostream_file.cpp  my_ostream_file.hpp
seminar/cpp-classroom-2021-sem01-cls06-matrosovm/src/tests/: task_1_test.cpp  task_2_test.cpp  task_3_test.cpp  task_4_test.cpp
seminar/cpp-classroom-2021-sem01-cls07-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem01-cls07-matrosovm/src/task_1/: json_value.cpp  test_json_value.cpp
seminar/cpp-classroom-2021-sem01-cls08-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem01-cls08-matrosovm/src/task_1/: fibonacci.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls08-matrosovm/src/task_2/: functions.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls08-matrosovm/src/task_3/: queue.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls08-matrosovm/src/task_4/: priority_queue.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls11-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem01-cls11-matrosovm/src/task_any_all/: any_all.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls11-matrosovm/src/task_for_each/: for_each.hpp  test.cpp
seminar/cpp-classroom-2021-sem01-cls11-matrosovm/src/task_join/: test.cpp
seminar/cpp-classroom-2021-sem01-cls11-matrosovm/src/task_tuple_utils/: test_apply.cpp  test_at_many.cpp  test_transform_elements.cpp  tuple_utils.hpp
seminar/cpp-classroom-2021-sem02-cls01-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem02-cls01-matrosovm/src/task_1/: split.hpp  test.cpp
seminar/cpp-classroom-2021-sem02-cls01-matrosovm/src/task_2/: permutations.hpp  test.cpp
seminar/cpp-classroom-2021-sem02-cls01-matrosovm/src/task_3/: test.cpp  tricky_shared_ptr.hpp
seminar/cpp-classroom-2021-sem02-cls01-matrosovm/src/task_4/: test.cpp  timer.hpp
seminar/cpp-classroom-2021-sem02-cls01-matrosovm/src/task_5/: test.cpp  zip.hpp
seminar/cpp-classroom-2021-sem02-cls02-matrosovm/src/: CMakeLists.txt
seminar/cpp-classroom-2021-sem02-cls02-matrosovm/src/task1/: smoke_test.cpp  typeset.hpp
seminar/cpp-classroom-2021-sem02-cls02-matrosovm/src/task2/: pretty_print.hpp  smoke_test.cpp
seminar/cpp-classroom-2021-sem02-cls02-matrosovm/src/task3/: projections.hpp  smoke_test.cpp
seminar/cpp-classroom-2021-sem02-cls04-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem02-cls04-matrosovm/src/task_1/: cowjson.hpp  test.cpp
seminar/cpp-classroom-2021-sem02-cls04-matrosovm/src/task_2/: calculate.cpp  calculate.hpp  test_calculate.cpp
seminar/cpp-classroom-2021-sem02-cls05-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem02-cls05-matrosovm/src/practice/: badLib.sh  bad_lib.cpp  bad_lib.hpp  big.cpp  big.hpp  bigLib.sh  disk_utils.cpp  (+6 more)
seminar/cpp-classroom-2021-sem02-cls06-matrosovm/: CMakeLists.txt  README.adoc
seminar/cpp-classroom-2021-sem02-cls08-matrosovm/: CMakeLists.txt  CMakeLists.txt.in  README.adoc
seminar/cpp-classroom-2021-sem02-cls09-matrosovm/: CMakeLists.txt  README.adoc
(+139 files in other folders)
